--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,18 @@ asgiref==3.6.0
 beautifulsoup4==4.12.1
 bleach==6.0.0
 crispy-bootstrap4==2022.1
+dj-database-url==1.3.0
 Django==3.2.18
 django-crispy-forms==2.0
 django-markdownify==0.9.3
+gunicorn==20.1.0
 Markdown==3.4.3
 markdownify==0.11.6
 Pillow==9.5.0
+psycopg==3.1.8
 six==1.16.0
 soupsieve==2.4
 sqlparse==0.4.3
 tinycss2==1.1.1
+typing_extensions==4.5.0
 webencodings==0.5.1
